# Planet-app

./: CMakeLists.txt  PlanetDetailsDialouge.cpp  PlanetInfo.h  README.md  detailsdialouge.cpp  detailsdialouge.h  mainwindow.cpp  mainwindow.h  planetTab.cpp  planetTab.h  resource.qrc
